# crash

./: .gitignore  Cargo.toml  crash_dump_164d2040-92f8-417f-b2bc-e1421d53d531.dmp  crash_dump_36eb63c1-ea15-4398-a6b6-afb9714b9398.dmp  crash_report_164d2040-92f8-417f-b2bc-e1421d53d531.json  crash_report_36eb63c1-ea15-4398-a6b6-afb9714b9398.json  crash_report_436f2159-72bd-4883-9d1b-7a4fadd72bdd.json
dump-view/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dump-view/src/: App.tsx  index.css
dump-view/src/components/: CrashViewer.tsx  ThemeProvider.tsx  ThemeToggle.tsx
dump-view/src/components/ui/: dropdown-menu.tsx
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
