[package]
name = "crash_viewer_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
memmap2 = "0.9"
minidump = "0.25"
minidump-processor = "0.25"
uuid = { version = "1.4", features = ["v4"] }
breakpad-symbols = "0.25" 